docs/7.52/md/abengui_obsolete.md
---
title: "Obsolete User Dialogs"
description: |
  Various UI technologies are available in the ABAP environment: -   Classic SAP GUI technologies -   Classic dynpros(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpros.htm) -   Selection screens(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselection_scre
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abengui_obsolete.htm"
abapFile: "abengui_obsolete.htm"
keywords: ["select", "do", "if", "try", "class", "abengui", "obsolete"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_obsolete.htm) → 

Obsolete User Dialogs

Various UI technologies are available in the ABAP environment:

-   Classic SAP GUI technologies

-   [Classic dynpros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpros.htm)

-   [Selection screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselection_screen.htm)

-   [Classic lists](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpro_list.htm)

-   Web-based technologies

-   [Business Server Pages](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbusiness_server_pages_glosry.htm "Glossary Entry")

-   [Web Dynpro ABAP](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenweb_dynpro_glosry.htm "Glossary Entry")

-   [SAPUI5](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensapui5_glosry.htm "Glossary Entry")

If possible, we recommend you use [SAPUI5](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensapui5_glosry.htm "Glossary Entry") or [Web Dynpro](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenweb_dynpro_glosry.htm "Glossary Entry"). If classic technologies are still used for any reason, the following constructs must be avoided:

-   [Obsolete statements in dynpro flow logic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_obsolet.htm)

-   [Obsolete ABAP statements for dynpros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpro_obsolet.htm)

-   [Obsolete statements in list processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlists_obsolete.htm)

-   [Obsolete editor calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentexteditor.htm)

Continue
[Obsolete statements of the screen flow logic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendynpro_obsolet.htm)
[Obsolete ABAP Statements for Dynpros](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_dynpro_obsolet.htm)
[Obsolete Statements for Selection Screens](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenselscreen_obsolete.htm)
[Obsolete Statements in List Processing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlists_obsolete.htm)
[Obsolete Editor Calls](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentexteditor.htm)