docs/7.57/md/abengui_obsolete.md
---
title: "Obsolete User Dialogs"
description: |
  Various UI technologies can be used in the ABAP context: -   Classic SAP GUI technologies -   Classic dynpros(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros.htm) -   Selection screens(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_screen.htm
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengui_obsolete.htm"
abapFile: "abengui_obsolete.htm"
keywords: ["select", "do", "if", "try", "class", "abengui", "obsolete"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Obsolete User Dialogs, ABENGUI_OBSOLETE, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0
ASuggestion for improvement:)

Obsolete User Dialogs

Various UI technologies can be used in the ABAP context:

-   Classic SAP GUI technologies
    -   [Classic dynpros](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpros.htm)
    -   [Selection screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselection_screen.htm)
    -   [Classic lists](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpro_list.htm)
-   Web-based technologies
    -   [Business Server Pages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbusiness_server_pages_glosry.htm "Glossary Entry")
    -   [Web Dynpro ABAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenweb_dynpro_glosry.htm "Glossary Entry")
    -   [SAPUI5](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensapui5_glosry.htm "Glossary Entry")

If possible, [SAPUI5](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensapui5_glosry.htm "Glossary Entry") or [Web Dynpro](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenweb_dynpro_glosry.htm "Glossary Entry") should be used. If classic technologies are still used for some reason, the following constructs must be avoided:

-   [Obsolete statements in dynpro flow logic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_obsolet.htm)
-   [Obsolete ABAP statements for dynpros](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpro_obsolet.htm)
-   [Obsolete statements in list processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlists_obsolete.htm)
-   [Obsolete editor calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentexteditor.htm)

Continue
[dynpro - Obsolete Statements in Dynpro Flow Logic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_obsolet.htm)
[dynpro - Obsolete ABAP Statements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dynpro_obsolet.htm)
[Obsolete Statements for Selection Screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselscreen_obsolete.htm)
[Obsolete Statements in List Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlists_obsolete.htm)
[Obsolete Editor Calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentexteditor.htm)